feat: seo and fix ios arcade buttons

--- a/index.html
+++ b/index.html
@@ -6,11 +6,31 @@
     <link rel="stylesheet" href="CSS/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <title>Puissance 4</title>
+    <title>Puissance 4 en ligne gratuit | Jouez maintenant</title>
     <script src="https://kit.fontawesome.com/b574b73ebd.js"></script>
     <script src="JS/app.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://umami.dibodev.fr/script.js" data-website-id="c2dc1ca7-7219-4a44-8719-aa9c11402905" defer></script>
+    <meta property="og:title" content="Puissance 4 en ligne gratuit | Dibodev">
+    <meta property="og:description" content="Affrontez vos amis au Puissance 4 directement en ligne ! Jouez gratuitement, sans inscription, depuis ordinateur ou mobile.">
+    <meta property="og:image" content="https://puissance4.dibodev.fr/Assets/Images/logoP4v2.png">
+    <meta property="og:url" content="https://puissance4.dibodev.fr">
+    <meta property="og:type" content="website">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Puissance 4 en ligne gratuit">
+    <meta name="twitter:description" content="Jouez gratuitement au Puissance 4 en ligne contre vos amis.">
+    <meta name="twitter:image" content="https://puissance4.dibodev.fr/Assets/Images/logoP4v2.png">
+    <meta name="description" content="Jouez gratuitement au Puissance 4 en ligne sur puissance4.dibodev.fr. Un jeu classique de stratégie à deux joueurs, accessible depuis ordinateur et mobile.">
+    <meta name="keywords" content="Puissance 4, jeu Puissance 4, puissance 4 en ligne, puissance 4 gratuit, jeu stratégie, connect four">
+    <meta name="author" content="Dibodev">
+
+    <!-- Ouvre “plein écran” quand ajouté à l'écran d'accueil -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <!-- Utilise toute la surface sur iPhone avec Dynamic Island -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <link rel="apple-touch-icon" href="Assets/Images/p4-ico2.png">
 </head>
 <body>
 
